--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,6 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+.background-pattern-square {
+  background-image: linear-gradient(90deg,rgba(0,0,0,.1) 2px,transparent 0),linear-gradient(180deg,rgba(0,0,0,.1) 2px,transparent 0);
+}
